3.4-route-rewrite/k8s/deployment-log-output.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: europe-north1-docker.pkg.dev/dwk-gke-501611/dwk-gke/log-output:1.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config-volume
              mountPath: /config
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: log-output-config
            items:
              - key: information.txt
                path: information.txt
