3.4-route-rewrite/k8s/deployment-pingpong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: europe-north1-docker.pkg.dev/dwk-gke-501611/dwk-gke/pingpong:1.2
          ports:
            - containerPort: 3000
